syntax = "proto3";
option java_package = "com.mogujie.tt.protobuf";
option optimize_for = LITE_RUNTIME;

import "Interface_Macro.proto";

//平台初始化
//type:Pb_TYPE_MEET_INTERFACE_INITENV
//method: start
message	pbui_MeetCore_InitParam
{
	bytes       pconfigpathname=1;//client.ini文件路径名
	fixed32		logtofile=2;//保存日志到文件
	fixed32		streamnum=3;//初始化的流通道数
	fixed32		programtype=4;//程序类型 用于区分程序来初始化接口数据 参见Interface_Macro.proto--> Pb_ProgramType
}

//平台网络和数据初始化成功
//type:Pb_TYPE_MEET_INTERFACE_READY
//method: notify
//callback
message	pbui_Ready				
{
	fixed32		    areaid=1;//连接上的区域服务器ID
}

//平台时间
//type:Pb_TYPE_MEET_INTERFACE_TIME
//method: notify
//callback
message	pbui_Time		
{
	fixed64		    usec = 1;//本地时间，每秒一次 单位：微秒
}

//call
//type:需要缓存数据的类别
//method: cache 
//如果有缓存则返回ERROR_MEET_INTERFACE_NULL
message	pbui_MeetCacheOper	
{
	fixed32      cacheflag=1;// 缓存标志 参见Pb_CacheFlag

	//id用法描述 eg:需要缓存目录id=0表示缓存所有目录信息(不包括目录里的文件),当id=1时表示缓存该目录里的文件,如果id=0不支持则会返回ERROR_MEET_INTERFACE_PARAMETER
	fixed32		id=2;
}

//分页查询
//call
//type:需要查询的数据的类别
//method: pagequery 应用方调用
message	pbui_PageReqQueryInfo
{
	fixed32			pageindex=1;//请求页 从0 开始
	fixed32			pagenum=2;  //每页项数
	fixed32			idval=3;//用于分组使用,如：查询指分组中的人员,这里填写分组id
}

//分页查询返回结构头部
//callreturn
//type:需要查询的数据的类别
//method: pagequery 接口方返回
message	pbui_PageResQueryInfo
{
	fixed32			pageindex=1;//起始索引 从0 开始
	fixed32			pagenum=2;//每页项数
	fixed32			itemnum=3;//当前页项数 ,根据数据不同用不同的解析
	fixed32			totalnum=4;//总项数
	fixed32		    idval=5;//用于分组使用,如：查询指分组中的人员,这里填写分组id
}

//指定ID查询 返回结果按 query 返回
//call
//type:需要查询的数据的类别
//method: SINGLEQUERYBYID 应用方调用
message	pbui_QueryInfoByID
{
	fixed32 id=1;//用于分组使用,如：查询指分组中的人员,这里填写分组id
}

//指定名称查询 返回结果按 query 返回
//call
//type:需要查询的数据的类别
//method: SINGLEQUERYBYNAME 应用方调用
message	pbui_QueryInfoByName
{
	bytes name=1;
}

//指定双重ID查询 返回结果按 query 返回
//call
//type:需要查询的数据的类别
//method: SINGLEQUERYBYID 应用方调用
message	pbui_QueryInfoByDoubleID
{
	fixed32 id1=1;
	fixed32 id2=2;
}

//指定双重ID查询 返回结果按 query 返回
//call
//type:需要查询的数据的类别
//method: SINGLEQUERYBYNAME 应用方调用
message	pbui_DoubleQueryInfoByName
{
	fixed32 id1=1;
	bytes name=2;
}

//变更通知回调
//type:需要变更通知的数据的类别
//method: notify
message	pbui_MeetNotifyMsg
{
	fixed32 opermethod=1;//本次通知是因为opermethod方法触发的
	fixed32 id=2;//如果指定了ID刚表示是对特定ID的操作,为0表示全部
}

//变更通知回调
//type:需要变更通知的数据的类别
//method: notify
message	pbui_MeetNotifyMsgForDouble
{
	fixed32 opermethod=1;//本次通知是因为opermethod方法触发的
	fixed32 id=2;//如果指定了ID刚表示是对特定ID的操作,为0表示全部
	fixed32 subid=3;//如果指定了ID刚表示是对特定人员ID的操作,为0表示分组内的全部人员 
}

//call
//type:查询的属性类型
//method: queryproperty
message pbui_CommonQueryProperty
{
	fixed32 propertyid=1;//数据ID
	fixed32 parameterval=2;//传入参数 为0表示当前会场对应的信息
}

//返回32位无符号整形值
//callreturn
//type:查询的属性类型
//method: queryproperty
message pbui_CommonInt32uProperty
{
	fixed32 propertyval=1;//数据值
}

//返回64位无符号整形值
//callreturn
//type:查询的属性类型
//method: queryproperty
message pbui_CommonInt64uProperty
{
	fixed64 propertyval=1;//数据值
}

//返回字符串值
//callreturn
//type:查询的属性类型
//method: queryproperty
message pbui_CommonTextProperty
{
	bytes propertyval=1;//数据值
}

//设备寄存器变更通知
//type:Pb_TYPE_MEET_INTERFACE_DEVICEINFO
//callback
//method: notify
message pbui_Type_MeetDeviceBaseInfo
{
	fixed32   deviceid=1;//设备ID
	fixed32	  attribid=2;//寄存器id 0:net status  50:res status  63:base info
}

//设备ip信息
message pbui_SubItem_DeviceIpAddrInfo
{
	bytes    ip=3;//ip地址
	fixed32  port=4;//端口
}

//设备资源信息
message pbui_SubItem_DeviceResInfo
{
	fixed32  playstatus=1;	
	fixed32  triggerId=2;
	fixed32  val=3; //status =Pb_DEVICE_PLAYSTATUS_MEDIA mediaid，Pb_DEVICE_PLAYSTATUS_STREAM设备ID，Pb_DEVICE_PLAYSTATUS_TALK对讲设备ID
	fixed32  val2=4; //status =Pb_DEVICE_PLAYSTATUS_MEDIA 0播放中,1暂停|Pb_DEVICE_PLAYSTATUS_STREAM,Pb_DEVICE_PLAYSTATUS_TALK子流通道
}

//设备基本信息
message pbui_Item_DeviceDetailInfo
{
	fixed32  devcieid=1;
	bytes    devname=2;
	repeated pbui_SubItem_DeviceIpAddrInfo ipinfo=3;//ip信息
	fixed32  netstate=4;

	repeated pbui_SubItem_DeviceResInfo resinfo=5;//资源信息

	fixed32	 facestate=6;//界面状态 参见MemState_MainFace 定义
	fixed32  memberid=7;//当前人员
	fixed32  meetingid=8;//当前会议
}

//返回查询设备信息
//callreturn
//type:Pb_TYPE_MEET_INTERFACE_DEVICEINFO
//method: query
message pbui_Type_DeviceDetailInfo
{
	repeated pbui_Item_DeviceDetailInfo pdev=1;
}

message pbui_Item_DeviceResPlay
{
	fixed32 devceid=1;

	//如果设备ID是参会人员席位,以下数据有效
	fixed32 memberid=2;
	bytes   name=3;//参会人员名称
}

//查询当前可加入播放的桌面同屏流
//call
//type:TYPE_MEET_INTERFACE_DEVICEINFO
//method: METHOD_MEET_INTERFACE_RESINFO
message pbui_Type_DeviceResPlay
{
	repeated pbui_Item_DeviceResPlay pdev=1;
}

//查询指定设备的某项属性
//call 
//type:Pb_TYPE_MEET_INTERFACE_DEVICEINFO
//method: queryproperty
message pbui_MeetDeviceQueryProperty
{
	fixed32 propertyid=1;//数据ID
	fixed32 deviceid=2;//传入参数 为0表示本机设备ID
	fixed32 paramterval=3;//传入参数
}

//返回 查询指定设备的整数值属性
//call return
//type:Pb_TYPE_MEET_INTERFACE_DEVICEINFO
//method: queryproperty
message pbui_DeviceInt32uProperty
{
	fixed32  propertyval=1; //数据
	fixed32  propertyval2=2;//数据
	fixed32  propertyval3=3;//数据
	fixed32  propertyval4=4;//数据
}

//返回 查询指定设备的字符串属性
//call return
//type:Pb_TYPE_MEET_INTERFACE_DEVICEINFO
//method: queryproperty
message pbui_DeviceStringProperty
{
	bytes propertytext=1; //字符串
}

//call
//type:Pb_TYPE_MEET_INTERFACE_DEVICEINFO
//method: modifyinfo
message pbui_DeviceModInfo
{
	fixed32 modflag=1;//指定需要修改的标志位
	fixed32 devcieid=2;
	bytes   devname=3;
	repeated pbui_SubItem_DeviceIpAddrInfo ipinfo=4;//ip信息
	fixed32 liftgroupres0=5;//升降话筒组ID
	fixed32 liftgroupres1=6;//升降话筒组ID
}

//删除设备
//call
//type:Pb_TYPE_MEET_INTERFACE_DEVICEINFO
//method: del
message pbui_DeviceDel
{
	repeated fixed32 devid=1;
}

//升级设备
//call
//type::Pb_TYPE_MEET_INTERFACE_DEVICEINFO
//method: update
message pbui_Type_DoDeviceUpdate
{
	fixed32		mediaid=1;//已经上传完成的升级文件ID
}

//会议界面状态通知
//callback callreturn
//type:Pb_TYPE_MEET_INTERFACE_DEVICEMEETSTATUS
//method: qeuery/notify
message pbui_MeetDeviceMeetStatus
{
	fixed32  deviceid=1;
	fixed32  memberid=2;
	fixed32  facestatus=3; // 参见Pb_MeetFaceStatus 定义
	fixed32  meetingid=4;
}

//查询指定设备的某项属性
//callreturn call
//type:Pb_TYPE_MEET_INTERFACE_DEVICEMEETSTATUS
//method: qeuery/modify
message pbui_ModDeviceMeetStatus
{
	fixed32 facestatus=1;//修改界面状态
}

//窗口缩放变更
//callback
//type:Pb_TYPE_MEET_INTERFACE_DEVICEOPER
//method: zoom
message pbui_MeetZoomResWin
{
	fixed32   zoomper=1;
	repeated  fixed32 res=2;
}

//窗口缩放
//call
//type:Pb_TYPE_MEET_INTERFACE_DEVICEOPER
//method: zoom
message pbui_MeetDoZoomResWin
{
	fixed32   zoomper=1;
	repeated  fixed32 res=2;
	repeated  fixed32 devid=3;
}

//接到参会人员数量和签到数量的通知
//callback
//type:Pb_TYPE_MEET_INTERFACE_DEVICEOPER
//method: Pb_METHOD_MEET_INTERFACE_BROADCAST
message pbui_Type_MeetMemberCastInfo
{
	fixed32 deviceid=1;//广播者设备ID
	fixed32 memberid=2;//广播者参会人员ID

	fixed32 membersize=3; //会议中广播时的参会人员数量
	fixed32 membersignsize=4;////会议中广播时的参会人员已经签到的数量
}

//辅助签到--进入会议功能界面
//call
//type:Pb_TYPE_MEET_INTERFACE_DEVICEOPER
//method: enter
message pbui_MeetDoEnterMeet
{
	repeated  fixed32 devid=1;
}

//回到主界面
//call
//type:Pb_TYPE_MEET_INTERFACE_DEVICEOPER
//method: back
message pbui_MeetDoToHomePage
{
	repeated  fixed32 devid=1;
}

//发送请求成为管理员
//call
//type:Pb_TYPE_MEET_INTERFACE_DEVICEOPER
//method: Pb_METHOD_MEET_INTERFACE_REQUESTTOMANAGE
message pbui_Type_MeetRequestManage
{
	//指定收到该请求的设备ID
	repeated  fixed32 devid=1;
}

//收到请求成为管理员请求
//callback
//type:Pb_TYPE_MEET_INTERFACE_DEVICEOPER
//method: Pb_METHOD_MEET_INTERFACE_REQUESTTOMANAGE
message pbui_Type_MeetRequestManageNotify
{
	fixed32  deviceid=1;       //发起请求的设备ID
	fixed32  memberid=2;       //发起请求的人员ID
}

//回复请求成为管理员请求
//call
//type:Pb_TYPE_MEET_INTERFACE_DEVICEOPER
//method: Pb_METHOD_MEET_INTERFACE_RESPONSETOMANAGE
message pbui_Type_MeetResponseRequestManage
{
	//指定收到该请求的设备ID
	repeated  fixed32 devid=1;
	fixed32  returncode=2;		//1=同意,0=不同意
}

//收到请求成为管理员回复
//callback
//type:Pb_TYPE_MEET_INTERFACE_DEVICEOPER
//method: Pb_METHOD_MEET_INTERFACE_RESPONSETOMANAGE
message pbui_Type_MeetRequestManageResponse
{
	fixed32  deviceid=1;       //发起请求的设备ID
	fixed32  memberid=2;       //发起请求的人员ID
	fixed32  returncode=3;		//1=同意,0=不同意
}

//发送请求参会人员权限请求
//call
//type:Pb_TYPE_MEET_INTERFACE_DEVICEOPER
//method: Pb_METHOD_MEET_INTERFACE_REQUESTPRIVELIGE
message pbui_Type_MeetRequestPrivilege
{
	//指定收到该请求的设备ID
	repeated  fixed32 devid=1; 
	fixed32  privilege=2;//申请的权限 参见Pb_MemberPermissionPropertyID
}

//收到请求参会人员权限请求
//callback
//type:Pb_TYPE_MEET_INTERFACE_DEVICEOPER
//method: Pb_METHOD_MEET_INTERFACE_REQUESTPRIVELIGE
message pbui_Type_MeetRequestPrivilegeNotify
{
	fixed32  deviceid=1;       //发起请求的设备ID
	fixed32  memberid=2;       //发起请求的人员ID
	fixed32  privilege=3;		//申请的权限 参见Pb_MemberPermissionPropertyID
}

//回复参会人员权限请求
//call
//type:Pb_TYPE_MEET_INTERFACE_DEVICEOPER
//method: Pb_METHOD_MEET_INTERFACE_RESPONSEPRIVELIGE
message pbui_Type_MeetResponseRequestPrivilege
{
	//指定收到该请求的设备ID
	repeated  fixed32 devid=1;
	fixed32  returncode=2;		//1=同意,0=不同意
}

//收到参会人员权限请求回复
//callback
//type:Pb_TYPE_MEET_INTERFACE_DEVICEOPER
//method: Pb_METHOD_MEET_INTERFACE_RESPONSEPRIVELIGE
message pbui_Type_MeetRequestPrivilegeResponse
{
	fixed32  deviceid=1;       //发起请求的设备ID
	fixed32  memberid=2;       //发起请求的人员ID
	fixed32  returncode=3;		//1=同意,0=不同意
}

//会议上下文  查询属性数据
//type: Pb_TYPE_MEET_INTERFACE_MEETCONTEXT
//method: queryproperty
message pbui_QueryMeetContextInfo
{
	fixed32 propertyid=1;//数据ID
}

//会议上下文  返回整形数据
//type: Pb_TYPE_MEET_INTERFACE_MEETCONTEXT
//method: queryproperty/setproperty
message pbui_MeetContextInfo
{
	fixed32 propertyid=1;//数据ID
	fixed32 propertyval=2;//值 
	bytes   propertytext=3;//字符串
}

message pbui_ItemAgendaTimeInfo
{
	fixed32  agendaid=1;  //议程ID
	fixed32  status=2;  //议程状态 参见Pb_AgendaStatus
	fixed32  dirid=3;  //绑定目录ID
	fixed64  startutctime=4;//单位秒
	fixed64  endutctime=5;  //单位秒
	bytes    desctext=6; //描述内容
}

//指定的媒体作议程 agendatype=Pb_MEET_AGENDA_TYPE_FILE(modify,query)
//指定的文本作议程 agendatype=Pb_MEET_AGENDA_TYPE_TEXT(modify,query)
//时间轴式议程     agendatype=Pb_MEET_AGENDA_TYPE_TIME(modify,query,add,del,set)
//call ,callreturn
//type: Pb_TYPE_MEET_INTERFACE_MEETAGENDA
message pbui_meetAgenda
{
	fixed32	 agendatype=1;//议程类型 参见Pb_AgendaType
	fixed32  mediaid=2;// 媒体ID
	bytes    text=3;// 议程文本
	repeated pbui_ItemAgendaTimeInfo  item=4;// 时间轴式议程
}

//会议网页
//type: Pb_TYPE_MEET_INTERFACE_DEFAULTURL
//method: notify,modify,query
message pbui_meetUrl
{
	bytes url=1;
}

//会议公告
message pbui_Item_BulletDetailInfo
{
	fixed32		bulletid=1;
	bytes	    title=2; //标题
	bytes	    content=3; //内容 
	fixed32		type=4;//类别
	fixed32		starttime=5; //开始时间
	fixed32		timeouts=6;  //超时值
}

//会议公告
//Pb_TYPE_MEET_INTERFACE_MEETBULLET
//call
//method: add,del,modify,query,publish
message pbui_BulletDetailInfo
{
	repeated pbui_Item_BulletDetailInfo  item=1;// 
}

//会议公告
message pbui_BigBulletDetailInfo
{
	bytes	    text=1; //标题
}

message pbui_Item_AdminDetailInfo
{
	fixed32 adminid=1;
	bytes   adminname=2;
	bytes   pw=3;//密码 md5 ascill 32字节
	bytes   comment=4;
	bytes   phone=5;
	bytes   email=6;
}

//管理员
//call
//Pb_TYPE_MEET_INTERFACE_ADMIN
//method: add\del\modify\query
message pbui_TypeAdminDetailInfo
{
	repeated pbui_Item_AdminDetailInfo  item=1;// 
}

//修改管理员自身的密码
//call
//Pb_TYPE_MEET_INTERFACE_ADMIN
//method: set
message pbui_Type_AdminModifyPwd
{
	bytes			adminname=1;//用户名
	bytes			adminoldpwd=2;//用户密码(ascill/md5ascill)
	bytes			adminnewpwd=3;//用户密码(ascill/md5ascill)
}

//管理员登陆
//Pb_TYPE_MEET_INTERFACE_ADMIN
//method: logon
message pbui_Type_AdminLogon
{
	fixed32			isascill=1;//是否已经md5加密
	bytes			adminname=2;//用户名
	bytes			adminpwd=3;//用户密码(ascill/md5ascill)
}

//登陆返回
//Pb_TYPE_MEET_INTERFACE_ADMIN
//method: logon
message pbui_Type_AdminLogonStatus
{
	fixed32			err=1;//
	fixed32			sessionid=2;//会话ID
	fixed32			adminid=3;//会话ID
	bytes			adminname=4;
}

//会议管理员控制的会场
//type:Pb_TYPE_MEET_INTERFACE_MANAGEROOM
//method: query/save
message pbui_Type_MeetManagerRoomDetailInfo
{
	fixed32   mgrid=1;//管理员ID
	repeated  fixed32 roomid=2; //会场ID
}

//终端控制
//type:Pb_TYPE_MEET_INTERFACE_DEVICECONTROL
//callback
//method: notify
message pbui_Type_DeviceControl
{
	fixed32			oper=1;//参见定义 enum Pb_DeviceControlFlag
	fixed32			operval1=2;//操作对应的参数 如更换主界面的媒体ID
	fixed32			operval2=3;//操作对应的参数
}

//终端控制
//type:Pb_TYPE_MEET_INTERFACE_DEVICECONTROL
//call
//method: control
message pbui_Type_DeviceOperControl
{
	fixed32			oper=1;////参见定义 enum Pb_DeviceControlFlag
	fixed32			operval1=2;//操作对应的参数 如更换主界面的媒体ID
	fixed32			operval2=3;//操作对应的参数
	repeated  fixed32			devid=4; //控制的设备,为0当前会议表示所有
}

//执行下载
//call
//type:Pb_TYPE_MEET_INTERFACE_DOWNLOAD
//method: add
message pbui_Type_DownloadStart
{
	fixed32		mediaid=1;					//下载媒体id
	fixed32	    newfile=2;				    //设置是否重新下载,0 不覆盖同名文件,重新下载
	fixed32	    onlyfinish=3;				//1表示只需要结束的通知
	bytes		pathname=4;//下载媒体全路径名称
}

//删除一个下载
//call
//type:Pb_TYPE_MEET_INTERFACE_DOWNLOAD
//method: del
message pbui_Type_DownloadDel
{
	fixed32 mediaid =1;	//下载媒体id
}

//下载进度通知
//callback
//type:Pb_TYPE_MEET_INTERFACE_DOWNLOAD
//method: notify
message pbui_Type_DownloadCb
{
	fixed32	   progress=1;				//下载进度
	fixed32	   nstate=2;				    //下载状态,参考state flag
	fixed32	   err=3;						//错误值 ERROR
	fixed32    mediaid=4;					//下载媒体id
}

//播放进度通知
//callback
//type:Pb_TYPE_MEET_INTERFACE_MEDIAPLAYPOSINFO
//method: notify
message pbui_Type_PlayPosCb
{
	fixed32  mediaId=1;						//媒体ID
	fixed32  status=2;						//0=播放中，1=暂停，2=停止,3=恢复
	fixed32  per=3;							//当前位置，百分比
	fixed32  sec=4;							//当前播放秒数，当status>0时，为文件ID号
}

//上传进度通知
//callback
//type:Pb_TYPE_MEET_INTERFACE_UPLOAD
//method: notify
message pbui_TypeUploadPosCb
{
	fixed32  mediaId=1;						//媒体ID
	fixed32  status=2;					    //参见 Pb_Upload_State				
	fixed32  per=3;							//当前位置，百分比
	fixed32  uploadflag=4;				    //参见 Pb_Upload_Flag
	fixed32  userval=5;//用户自定义的值
}

//上传文件
//call
//type:Pb_TYPE_MEET_INTERFACE_UPLOAD
//method: add
message pbui_Type_AddUploadFile
{
	fixed32 uploadflag=1;//上传标志 参见 Pb_Upload_Flag
	fixed32 dirid=2;//上传的目录ID 参见 Pb_Upload_DefaultDirId

	fixed32 attrib=3;//文件属性
	bytes   newname=4;//上传后的新名称
	bytes   pathname=5;//全路径名

	fixed32 userval=6;////用户自定义的值
	fixed32 mediaid=7;//上传时返回的媒体ID
}

//上传返回媒体ID信息
message pbui_TypeUploadReturn
{
	fixed32  mediaId=1;						//媒体ID
}


//查询上传文件
message pbui_Item_UploadFileDetailInfo
{
	fixed32  mediaid=1;//媒体ID
	fixed32  dirid=2;//上传到的目录ID

	fixed32	 errstatus=3;//错误码
	fixed32  percent=4;//上传的百分比
	fixed32  userval=5;//

	bytes   newname=6;//上传后的新名称
	bytes   pathname=7;//全路径名
}

//查询上传
//call return
//type:Pb_TYPE_MEET_INTERFACE_UPLOAD
//method: query
message pbui_Type_UploadFileDetailInfo
{
	repeated pbui_Item_UploadFileDetailInfo item=1;
}

//删除上传
//call
//type:Pb_TYPE_MEET_INTERFACE_UPLOAD
//method: del
message pbui_Type_DelUploadFile
{
	fixed32  mediaid=1;//媒体ID
}

//常用人员
message pbui_Item_PersonDetailInfo
{
	fixed32 personid=1;
	bytes   name=2;
	bytes   company=3;
	bytes   job=4;
	bytes   comment=5;
	bytes   phone=6;
	bytes   email=7;
	bytes   password=8;
}

//常用人员
//call return
//type:Pb_TYPE_MEET_INTERFACE_PEOPLE
//method: add\del\modify\query
message pbui_Type_PersonDetailInfo
{
	repeated pbui_Item_PersonDetailInfo item=1;
}

//常用人员分组
message pbui_Item_PeopleGroupDetailInfo
{
	fixed32 groupid=1;
	bytes   name=2;
}

//常用人员分组
//call return
//type:Pb_TYPE_MEET_INTERFACE_PEOPLEGROUP
//method: add\del\modify\query
message pbui_Type_PeopleGroupDetailInfo
{
	repeated pbui_Item_PeopleGroupDetailInfo item=1;
}

//常用人员分组人员
//call callreturn
//type:Pb_TYPE_MEET_INTERFACE_PEOPLEGROUPITEM
//method: save\query\move\del
message pbui_Type_PeopleInGroupDetailInfo
{
	fixed32			groupid=1;
	repeated fixed32			memberid=2;
}

//添加常用人员分组人员
//call
//type:Pb_TYPE_MEET_INTERFACE_PEOPLEGROUPITEM
//method: add
message pbui_Type_AddPeopleToGroup
{
	fixed32			groupid=1;
	pbui_Item_PersonDetailInfo item=2;
}

//参会人员
message pbui_Item_MemberDetailInfo
{
	fixed32 personid=1;
	bytes   name=2;
	bytes   company=3;
	bytes   job=4;
	bytes   comment=5;
	bytes   phone=6;
	bytes   email=7;
	bytes   password=8;
}

//参会人员
//call callreturn
//type:Pb_TYPE_MEET_INTERFACE_MEMBER
//method: add\del\modify\query
message pbui_Type_MemberDetailInfo
{
	repeated pbui_Item_MemberDetailInfo item=1;
}

//参会人员属性
//call
//type:Pb_TYPE_MEET_INTERFACE_MEMBER
//method: queryproperty
message pbui_Type_MeetMemberQueryProperty
{
	fixed32 propertyid=1;//属性ID 参见 Pb_MemberPropertyID
	fixed32 parameterval=2;//传入参数 为0表示本机设置定的人员id
}

//参会人员属性
//callreturn
//type: Pb_TYPE_MEET_INTERFACE_MEMBER
//method: queryproperty
message pbui_Type_MeetMembeProperty
{
	fixed32 propertyval=1;//整数属性值
	bytes   propertytext=2;//字符串属性值
}

//参会人员权限
message pbui_Item_MemberPermission
{
	fixed32 memberid=1;//参会人ID
	fixed32 permission=2;	//参会人权限
}

//参会人员权限
//type:Pb_TYPE_MEET_INTERFACE_MEMBERPERMISSION
//call
//method: save\query
message pbui_Type_MemberPermission
{
	repeated pbui_Item_MemberPermission item=1;
}

//参会人员权限
//call
//type:Pb_TYPE_MEET_INTERFACE_MEMBERPERMISSION
//method: queryproperty
message pbui_Type_MeetMemberPermissionQueryProperty
{
	fixed32 propertyid=1;//属性ID 参见 Pb_MemberPermissionPropertyID
	fixed32 memberid=2;//传入参数 为0表示本机设置定的人员id
}

//参会人员权限
//type:Pb_TYPE_MEET_INTERFACE_MEMBERPERMISSION
//callreturn
//method: queryproperty
message pbui_Type_MemberPermissionProperty
{
	fixed32 propertyval=1;//整数属性值
}

//参会人员分组
message pbui_Item_MemberGroupDetailInfo
{
	fixed32 groupid=1;
	bytes   name=2;
}

//参会人员分组
//type:Pb_TYPE_MEET_INTERFACE_MEMBERGROUP
//call
//method: add\del\modify\query
message pbui_Type_MemberGroupDetailInfo
{
	repeated pbui_Item_MemberGroupDetailInfo item=1;
}

//参会人员分组人员
//type:Pb_TYPE_MEET_INTERFACE_MEMBERGROUPITEM
//call
//method: save\query
message pbui_Type_MemberInGroupDetailInfo
{
	fixed32			groupid=1;
	repeated fixed32 memberid=2;
}

//设备会议信息
//call
//type:TYPE_MEET_INTERFACE_DEVICEFACESHOW
//method: query
message pbui_Type_DeviceFaceShowDetail
{
	fixed32 deviceid=1;		//设备ID
	fixed32 meetingid=2;		//会议ID
	fixed32 memberid=3;		//人员ID
	fixed32 roomid=4;			//会场ID
	fixed32  signin_type=5;	//签到类型
	bytes meetingname=6;		//会议名称
	bytes membername=7;     //人员名称
	bytes company=8;			//公司名称
	bytes job=9;				//职位名称
}

//会议视频相关
message pbui_Item_MeetVideoDetailInfo
{
	fixed32			id=1; //流通道ID
	fixed32		    deviceid=2;//设备ID
	fixed32			subid=3;//子通道ID
	bytes			name=4; //流通道名称
	bytes			addr=5; //流通道地址
}

//type:Pb_TYPE_MEET_INTERFACE_MEETVIDEO
//method: add/mod/del/query
message pbui_Type_MeetVideoDetailInfo
{
	repeated pbui_Item_MeetVideoDetailInfo item=1;//视频流
}

//会场信息
message pbui_Item_MeetRoomDetailInfo
{
	fixed32 roomid=1;		//会场ID
	fixed32 roombgpicid=2;	//会场底图ID
	fixed32 managerid=3;		//管理员ID
	bytes name=4;	//会场名称	
	bytes addr=5;     //会场地址
	bytes comment=6;//备注
}

//会场信息
//call
//type:Pb_TYPE_MEET_INTERFACE_ROOM
//method: add\del\mod\query
message pbui_Type_MeetRoomDetailInfo
{
	repeated pbui_Item_MeetRoomDetailInfo item=1;
}

//会场底图信息 
//type:Pb_TYPE_MEET_INTERFACE_ROOM
//method: set
message pbui_Type_MeetRoomModBGInfo
{
	fixed32   roomid=1;//会场ID
	fixed32	  bgpicid=2; //底图媒体ID
}

//会场设备信息
//call
//type:Pb_TYPE_MEET_INTERFACE_ROOMDEVICE
//method: add \ del
message pbui_Type_MeetRoomModDeviceInfo
{
	fixed32   roomid=1;//会场ID
	repeated  fixed32	 deviceid=2; //设备数
}

//会场设备坐标朝向信息
message pbui_Item_MeetRoomDevPosInfo
{
	fixed32 devid=1;//设备ID
	float   x=2;//左上角x坐标
	float   y=3;//左上角y坐标
	fixed32    direction=4;//会场设备朝向 参见 Pb_DeviceDirection
}

//会场设备坐标朝向信息
//call
//type:Pb_TYPE_MEET_INTERFACE_ROOMDEVICE
//method: query/set
message pbui_Type_MeetRoomDevPosInfo
{
	fixed32   roomid=1;//会场ID
	repeated pbui_Item_MeetRoomDevPosInfo	 item=2; //设备
}

//会场设备排位详细信息
message pbui_Item_MeetRoomDevSeatDetailInfo
{
	fixed32 devid=1;//设备ID
	bytes   devname=2;//设备名称
	float  x=3;////左上角x坐标
	float  y=4;//左上角y坐标
	fixed32    direction=5;//会场设备朝向

	fixed32 memberid=6;//参会人员ID
	bytes   membername=7;//参会人员名称

	fixed32  issignin=8;//是否已经签到
	fixed32  role=9;//参会人员角色
}

//查询设备排位详细信息
//type:Pb_TYPE_MEET_INTERFACE_ROOMDEVICE
//method: METHOD_MEET_INTERFACE_DETAILINFO
message pbui_Type_MeetRoomDevSeatDetailInfo
{
	fixed32   roomid=1;//会场ID
	repeated pbui_Item_MeetRoomDevSeatDetailInfo	 item=2; //设备
}

//查询符合要求的设备ID
//call
//type:Pb_TYPE_MEET_INTERFACE_ROOMDEVICE
//method: complexquery
message pbui_Type_DumpMeetRoomDevInfo
{
	fixed32   filterflag=1;//查询标志 参见 Pb_RoomDeviceFilterFlag
	fixed32   roomid=2;//会场ID

	fixed32   facestatus=3; //匹配会议界面状态
	fixed32   exceptdevid=4;//排除指定ID
}

//返回符合要求的设备ID
//callreturn
//type:Pb_TYPE_MEET_INTERFACE_ROOMDEVICE
//method: complexquery
message pbui_Type_ResMeetRoomDevInfo
{
	repeated fixed32	 devid=1;   //设备
}

//会议信息
message pbui_Item_MeetMeetInfo
{
	fixed32			id=1; //会议ID
	bytes			name=2; //名称
	fixed32			roomId=3; //会场ID，即会议室 
	fixed32			secrecy=4; //是否为保密会议 1为密保会议
	fixed64			startTime=5; //开始时间 单位:秒
	fixed64			endTime=6;   //结束时间 单位:秒
	fixed32			signin_type=7;//签到类型
	fixed32			managerid=8;//管理员id
	bytes			onepsw_signin=9;//会议签到密码 不能超过Pb_SIGNIN_PSW_LEN 定义的限制长度
	fixed32			status=10;//会议状态，0为未开始会议，1为已开始会议，2为已结束会议
}

//会议信息
//call
//type:Pb_TYPE_MEET_INTERFACE_MEETINFO
//method: add/mod/del/query
message pbui_Type_MeetMeetInfo
{
	repeated pbui_Item_MeetMeetInfo	 item=1; //会议
}

//修改会议状态
//call
//type:Pb_TYPE_MEET_INTERFACE_MEETINFO
//method: modifystatus
message pbui_Type_MeetModStatus
{
	fixed32  meetid=1;			//会议ID
	fixed32  status=2; //会议状态 参见 Pb_MeetStatus
}

//会议目录
message pbui_Item_MeetDirDetailInfo
{
	fixed32			id=1; //目录ID
	bytes			name=2; //名称
	fixed32			parentid=3; //父目录ID
}

//会议目录
//call
//type:Pb_TYPE_MEET_INTERFACE_MEETDIRECTORY
//method: add/mod/del/query/childred
message pbui_Type_MeetDirDetailInfo
{
	repeated pbui_Item_MeetDirDetailInfo	 item=1; //会议
}

//会议目录文件
message pbui_Item_MeetDirFileDetailInfo
{
	fixed32			mediaid=1; //文件ID
	bytes			name=2; //文件名称
	fixed32			uploaderid=3; //上传者ID
	fixed32			uploader_role=4; //上传者角色
	fixed32			mstime=5;//时间 毫秒
	fixed64			size=6;//大小 字节
	fixed32			attrib=7;//文件属性
	fixed32			filepos=8;// 文件序号
	bytes			uploader_name=9; //上传者名称
}

//type:Pb_TYPE_MEET_INTERFACE_MEETDIRECTORYFILE
//method: add/mod/del/query
message pbui_Type_MeetDirFileDetailInfo
{
	fixed32   dirid=1;
	repeated pbui_Item_MeetDirFileDetailInfo	 item=2; //文件
}

//修改会议目录文件
message pbui_Item_ModMeetDirFile
{
	fixed32			mediaid=1; //文件ID
	bytes			name=2; //文件名称
	fixed32			attrib=3;//文件属性
}

//type:Pb_TYPE_MEET_INTERFACE_MEETDIRECTORYFILE
//method: modifyinfo
message pbui_Type_ModMeetDirFile
{
	fixed32   dirid=1;
	repeated pbui_Item_ModMeetDirFile	 item=2; //文件
}

//修改会议目录文件排序
//type:Pb_TYPE_MEET_INTERFACE_MEETDIRECTORYFILE
//method: set
message pbui_Type_ModMeetDirFilePos
{
	fixed32  dirid=1;//目录ID
	repeated fixed32  fileid=2;//按ID的排序 
}

//分页文件查询
//call
//type:Pb_TYPE_MEET_INTERFACE_MEETDIRECTORYFILE
//method: complexpagequery
message pbui_Type_ComplexQueryMeetDirFile
{
	fixed32      dirid=1;//为0表示从平台里查询(平台里查询这种情况下 role和uploadid是无效的)

	fixed32		 queryflag=2;//查询标志 参见Pb_MeetFileQueryFlag

	fixed32		 role=3;//上传者角色
	fixed32		 uploadid=4;//上传人员ID 为0表示全部

	fixed32		 filetype=5;//文件类型 为0表示全部 参见 Pb_MeetFileType

	fixed32		 attrib=6;//文件属性 为0表示全部
	fixed32		 pageindex=7;//分页值
	fixed32		 pagenum=8;//分页大小 为0表示返回全部
}

//分页文件查询返回结构头部
//callreturn
//type:Pb_TYPE_MEET_INTERFACE_MEETDIRECTORYFILE
//method: complexpagequery
message pbui_TypePageResQueryrFileInfo
{
	fixed32			pageindex=1;//起始索引 从0 开始
	fixed32			pagenum=2;//每页项数
	fixed32			itemnum=3;//当前页项数 ,根据数据不同用不同的解析
	fixed32			totalnum=4;//总项数
	
	repeated pbui_Item_MeetDirFileDetailInfo item =5;//文件
}

//有新的录音文件媒体文件通知
//type:Pb_TYPE_MEET_INTERFACE_MEETDIRECTORYFILE
//callback
//method: add
message pbui_Type_MeetNewRecordFile
{
	fixed32 mediaid=1;
	bytes   filename=2;//文件名
	fixed64 len=3;//大小 字节
	fixed32 msec=4; //播放时长，以ms为单位,如果为升级文件 记录升级的版本信息数据长度
}

//会议目录权限
//type:Pb_TYPE_MEET_INTERFACE_MEETDIRECTORYRIGHT
//method: save/query
message pbui_Type_MeetDirRightDetailInfo
{
	fixed32   dirid=1;
	repeated  fixed32 memberid=2; //参会人员ID
}

///start FileScore
message pbui_Item_MeetFileScore
{
	fixed32 fileid=1;  //文件ID
	fixed32 memberid=2;//参会人员ID
	fixed32 score=3;//评分
	fixed64 scoretime=4;//评分utc时间 微秒
}

//会议文件评分  修改
//会议文件评分相关
//type:Pb_TYPE_MEET_INTERFACE_FILESCORE
//method:添加、修改、删除、查询(数据库返回)
message pbui_Type_MeetFileScore
{
	fixed32		 isfirst=1;//是否为第一帧,如果评分太多,接下来的帧会在下次接收到后回调
	repeated pbui_Item_MeetFileScore item=2;
}

//会议文件评分  查询
//会议文件评分相关
//type:Pb_TYPE_MEET_INTERFACE_FILESCORE
//method:Pb_METHOD_MEET_INTERFACE_ASK\Pb_METHOD_MEET_INTERFACE_QUERY
message pbui_Type_QueryFileScore
{
	fixed32 fileid=1;   //文件ID
}

//会议文件评分  返回查询结果
//会议文件评分相关
//type:Pb_TYPE_MEET_INTERFACE_FILESCORE
//method:Pb_METHOD_MEET_INTERFACE_ASK
message pbui_Type_QueryAverageFileScore
{
	fixed32 fileid=1;   //文件ID
	fixed32 score=2;	 //平均评分
}
///end FileScore

///start Fileevaluate
message pbui_Item_FileEvaluate
{
	fixed32 fileid=1;  //文件ID
	fixed32 memberid=2;//参会人员ID
	fixed32 flag=3;//标志 参见evaluate flag 宏定义
	fixed64 evaluatetime=4;//评分utc时间 微秒
	bytes   evaluate=5;//评分的文本
}

//会议文件评价 
//type：Pb_TYPE_MEET_INTERFACE_FILEEVALUATE
//method:add、query
message pbui_Type_MeetingFileEvaluate
{
	fixed32      startrow=1;//查询返回用户传过来的开始行
	fixed32		 isfirst=2;//是否为第一帧,如果评价太多,接下来的帧会在下次接收到后回调
	
	repeated pbui_Item_FileEvaluate item=3;
}

//会议文件评价  查询
//type：Pb_TYPE_MEET_INTERFACE_FILEEVALUATE
//method:query
message pbui_Type_QueryFileEvaluate
{
	fixed32 fileid=1;   //文件ID 可以为0表示所有文件
	fixed32 memberid=2;//参会人员ID 可以为0表示所有参会人
	fixed64 startevaluatetime=3;//查询的起始评分utc时间 微秒 必须有效
	fixed64 endevaluatetime=4;//查询的结束评分utc时间 微秒 必须有效
	fixed32 startrow=5;//查询开始行 实现分页查询 必须有效 第一次从0开始
}

//会议文件评价  删除
//type：Pb_TYPE_MEET_INTERFACE_FILEEVALUATE
//method:del
message pbui_Type_DelFileEvaluate
{
	fixed32 fileid=1;   //文件ID 可以为0表示所有文件
	fixed32 memberid=2;//参会人员ID 可以为0表示所有参会人
	fixed64 evaluatetime=3;//评分utc时间 微秒 当fileid、memberid有效时 可以有效表示删除指定的评论
}
///end Fileevaluate

//////////////////////////////////////////////////////////////////////////
///start Meetevaluate
message pbui_Item_MeetEvaluate
{
	fixed32 memberid=1;//参会人员ID
	fixed32 flag=2;//标志 参见file evaluate flag 宏定义
	fixed64 evaluatetime=3;//评分utc时间 微秒
	bytes   evaluate=4;//评分的文本
}

//会议文件评价 
//type：Pb_TYPE_MEET_INTERFACE_MEETEVALUATE
//method:添加、查询(数据库返回)
message pbui_Type_MeetingMeetEvaluate
{
	fixed32   startrow=1;//查询返回用户传过来的开始行
	fixed32	  isfirst=2;//是否为第一帧,如果评分太多,接下来的帧会在下次接收到后回调
	repeated pbui_Item_MeetEvaluate item=3; 
}

//会议文件评价  查询
//stages：Pb_TYPE_MEET_INTERFACE_MEETEVALUATE
//method:查询
message pbui_Type_QueryMeetEvaluate
{
	fixed32 memberid=1;//参会人员ID 可以为0表示所有参会人
	fixed64 startevaluatetime=2;//查询的起始评价utc时间 微秒 必须有效
	fixed64 endevaluatetime=3;//查询的结束评分utc时间 微秒 必须有效
	fixed32 startrow=4;//查询开始行 实现分页查询 必须有效 第一次从0开始
}

//会议文件评价  删除
//stages：Pb_TYPE_MEET_INTERFACE_MEETEVALUATE
//method:删除
message pbui_Type_DelMeetEvaluate
{
	fixed32 memberid=1;//参会人员ID 可以为0表示所有参会人
	fixed64 evaluatetime=2;//评分utc时间 微秒 当memberid有效时 可以有效表示删除指定的评论
}
///end Meetevaluate



