syntax = "proto3";
option java_package = "com.mogujie.tt.protobuf";
option optimize_for = LITE_RUNTIME;

import "Interface_Macro.proto";

//会议功能
message pbui_Item_MeetFunConfigDetailInfo
{
	fixed32	funcode=1;	//功能标识码 参见 Pb_Meet_FunctionCode
	fixed32	position=2;	//位置标识码
}

//会议功能
//type:Pb_TYPE_MEET_INTERFACE_FUNCONFIG
//method: query/save/
message pbui_Type_MeetFunConfigDetailInfo
{
	repeated pbui_Item_MeetFunConfigDetailInfo item=1;
}